# circle-to-search-pc

./: .gitignore  Cargo.toml  Dioxus.toml  Info.plist  LICENSE  README.md  build.rs  create-linux-bundle.sh  create-macos-bundle.sh  create-windows-bundle.ps1  download-tessdata.sh  exclude  run.sh  setup.sh
.githooks/: pre-commit
.github/workflows/: build-test-release.yml
assets/: index.html
assets/icons/: app_icon.icns
assets/js/: app.js
models/ocrs/: text-detection.rten
src/: app.rs  app_theme.rs  app_theme_tests.rs  global_constants.rs  macos_permissions.rs  main.rs  main_broken.rs  system_tray.rs  system_tray_tests.rs  user_settings.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/core/interfaces/: clipboard_port.rs  image_search_port.rs  mod.rs  screen_capture_port.rs
src-tauri/src/core/models/: display.rs  mod.rs  screen_capture.rs  search_result.rs  selection_area.rs
src-tauri/src/infrastructure/: clipboard_provider.rs  google_lens_client.rs  macos_screen_capturer.rs  mod.rs
src-tauri/src/services/: circle_to_search_orchestrator.rs  mod.rs
src/adapters/: auto_launch.rs  google_lens_search_provider.rs  imgbb_image_hosting_service.rs  macos_app_behavior.rs  macos_permissions.rs  mod.rs  ocrs_service.rs  tesseract_ocr_service.rs
src/core/: mod.rs
src/core/adapters/: mod.rs  ocr_service.rs
src/core/interfaces/: mod.rs
src/core/interfaces/adapters/: image_hosting_service.rs  mod.rs  screen_capture_adapter.rs  search_provider.rs
src/core/interfaces/ports/: image_search_port.rs  mouse_position_provider.rs  screen_capture_port.rs  screen_capturer.rs
src/core/models/: capture_buffer.rs  display.rs  image_format.rs  mod.rs  ocr.rs  screen_capture.rs  screen_region.rs  search_result.rs  user_settings.rs  window_info.rs
src/core/orchestrators/: app.rs  app_orchestrator.rs  mod.rs
src/core/orchestrators/app_orchestrator/: capture.rs  image_actions.rs  interactive_ocr.rs  onboarding.rs  settings.rs  tests.rs  ui.rs  window_lifecycle.rs  window_picker.rs
src/core/orchestrators/app_orchestrator/ui/: main_window.rs  settings_window.rs
src/core/ports/: mod.rs  ocr_service.rs
src/infrastructure/: mouse_position_provider.rs  ocrs_service.rs  tesseract_ocr_service.rs  utils.rs  xcap_screen_capturer.rs
src/ports/: keyboard_listener.rs  mod.rs  mouse_position_provider.rs  system_tray.rs  xcap_screen_capturer.rs
src/presentation/: app_theme.rs  capture_view.rs  capture_view_backup.rs  interactive_ocr_view.rs  mod.rs  ocr_results_view.rs  onboarding_view.rs  window_picker_view.rs
src/presentation/capture_view/: canvas_program.rs  ui.rs
src/presentation/interactive_ocr_view/: ocr_overlay.rs  ocr_processing.rs  state.rs  ui.rs  update.rs
src/presentation/interactive_ocr_view/ui/: image_actions.rs  search_actions.rs  styles.rs  toolbars.rs
