[package]
name = "circle-to-search-pc"
version = "0.1.0"
edition = "2021"
description = "Circle to Search for Desktop"

[dependencies]
anyhow = "1.0"
arboard = { version = "3.6", features = ["wayland-data-control", "wl-clipboard-rs"] }
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [
    "advanced",
    "canvas",
    "image",
    "lazy",
    "tokio",
] }
mouse_position = "0.1"
rdev = { git = "https://github.com/rustdesk-org/rdev", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", default-features = false, features = ["time"] }
tray-icon = "0.21"
xcap = { version = "0.7", default-features = false }
log = "0.4"
env_logger = "0.11"

[profile.dev]
opt-level = 0
debug = false

[profile.release]
opt-level = 3
strip = "symbols"
lto = true
