[package]
name = "circle-to-search-pc"
version = "0.1.0"
edition = "2021"
description = "Circle to Search for Desktop"

[dependencies]
anyhow = "1.0"
arboard = { version = "3.6", features = ["wayland-data-control", "wl-clipboard-rs"] }
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [
    "advanced",
    "canvas",
    "image",
    "lazy",
    "tokio",
] }
mouse_position = "0.1"
rdev = { git = "https://github.com/rustdesk-org/rdev", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", default-features = false, features = ["time", "fs"] }
tray-icon = "0.21"
xcap = { version = "0.7", default-features = false }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1.89"
image = "0.25.9"
rten = "0.24.0"
rten-imageproc = "0.24.0"
rten-tensor = "0.24.0"
rusty-tesseract = "1.1.10"
reqwest = { version = "0.13.1", features = ["multipart", "blocking"] }
urlencoding = "2.1"
open = "5.3"
base64 = "0.22"
dirs = "5.0"
sysinfo = "0.33"

[profile.dev]
opt-level = 0
debug = false

[profile.release]
opt-level = 3
strip = "symbols"
lto = true
