[package]
name = "circle-to-search-pc"
version = "0.1.0"
edition = "2021"
description = "Circle to Search for Desktop"
build = "build.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dependencies]
anyhow = "1.0"
arboard = { version = "3.6", features = ["wayland-data-control", "wl-clipboard-rs"] }
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [
    "advanced",
    "canvas",
    "image",
    "lazy",
    "tokio",
] }
mouse_position = "0.1"
rdev = { git = "https://github.com/rustdesk-org/rdev", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", default-features = false, features = ["time", "fs", "macros", "rt"] }
tray-icon = "0.21"
xcap = { version = "0.7", default-features = false }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1.89"
futures = "0.3"
image = "0.25.9"
rten = "0.24.0"
rten-imageproc = "0.24.0"
rten-tensor = "0.24.0"
tesseract-static = { version = "0.2.0", features = ["parse"] }
reqwest = { version = "0.13.1", features = ["multipart", "blocking", "json"] }
urlencoding = "2.1"
open = "5.3"
base64 = "0.22"
dirs = "5.0"
sysinfo = "0.33"
auto-launch = "0.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"
libc = "0.2"

[package.metadata.bundle]
name = "Circle to Search"
identifier = "com.circle-to-search.app"
version = "0.1.0"
category = "Utility"
short_description = "Circle to Search for Desktop"
long_description = "A desktop application that brings Google's Circle to Search feature to your Mac"
copyright = "Copyright (c) 2026"
icon = ["assets/icon.icns", "assets/icon.png"]
resources = ["tessdata"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
strip = false
lto = false
debug = true

[profile.release-optimized]
inherits = "release"
lto = true
strip = true
